# polars-parquet

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  lib.rs  physical.rs  reader.rs  statistics.rs  types.rs
src/compression/: codec_zstd.rs  mod.rs
src/data/: mod.rs  page.rs  row_group.rs
src/metadata/: columns.rs  mod.rs  parse.rs  row_groups.rs  types.rs
src/metadata/statistics/: mod.rs
src/metadata/thrift_defined/: conversion.rs  mod.rs  parquet_format.rs
src/metadata/thrift_defined/rosetta/: metadata.rs  mod.rs
src/thrift_defined/: conversion.rs  mod.rs
src/thrift_defined/rosetta/: metadata.rs  mod.rs
src/thrift_utils/: conversion.rs  mod.rs  rosetta.rs
