[package]
name = "polars-parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = {version = "0.17", default-features = false}
zstd = {version = "0.12", optional = true, default-features = false}